--- a/Resources/Style_Default.css
+++ b/Resources/Style_Default.css
@@ -8,11 +8,11 @@ body { background-color: #006060; background-image: url('http://jawknee.com/coLa
 .banner_txt { color: #c0b0a0 }
 .banner_txt a:link { color: #d8c8b8; text-decoration: none;}
 .banner_txt a:visited { color: #b8a898; text-decoration: none; }
-.banner_txt a:hover { color: #f0e0d0; text-decoration: none; }
-.banner_txt a:active { color: #ffffff; text-decoration: none; }
+.banner_txt a:hover { color: #f0e0d0; }
+.banner_txt a:active { color: #ffffff; }
 
-.sidebar_l { width: 200px; position: absolute; top: 54px; left: 4px;  
-	font-family: Helvetica; 
+.sidebar_l { position: absolute; top: 54px; left: 4px; width: 200px; 
+	font-family: Helvetica; font-size: smaller;
 	color: black; 
 	background-color: #606060; background-image: url('http://jawknee.com/coLab/Resources/P1Gray.png'); 
 	}
