--- a/Resources/Style_Mailer.css
+++ b/Resources/Style_Mailer.css
@@ -1,8 +1,4 @@
-body { background-color: #006060; 
-	background-image: url('http://jawknee.com/coLab/Resources/P1Gray.png'); 
-	color: black }
-
-a:link { color: #d8c8b8; text-decoration: none;}
+body { background-color: #006060; background-image: url('http://jawknee.com/coLab/Resources/P1Gray.png'); color: black } a:link { color: #d8c8b8; text-decoration: none;}
 a:visited { color: #b8a898; text-decoration: none; }
 a:hover { color: #f0e0d0; }
 a:active { color: #ffffff; }
@@ -25,14 +21,16 @@ pre { font-family: chicago; }
 	background-color: #606060; background-image: url('http://jawknee.com/coLab/Resources/P1Gray.png'); 
 	}
 
-.main { position: absolute; top: 25px; left: 25px;  width: 700px; 
-	font-family:Georgia; 
+.main { font-family:Georgia; 
 	background-color: #209090; 
 	background-image: url('http://jawknee.com/coLab/Resources/P1Black2.png');
 	color: #a0b0c0; }
 
-.main table h2 { color: #c0b0a0; }
-.main table { color: #a0b0c0; }
+.main h2 { color: #c0b0a0; }
+.main table { font-family:Georgia;
+		background-color: #209090;
+	        background-image: url('http://jawknee.com/coLab/Resources/P1Black2.png');
+	        color: #a0b0c0; }
 .main table h2 { color: #c0b0a0; }
 
 .fundesc { font-family: cursive, 'Brush Script MT','Lucida Handwriting'; color: #c0b0a0 }
