--- a/Resources/Style_Mailer.css
+++ b/Resources/Style_Mailer.css
@@ -1,4 +1,4 @@
-body { background-color: #606060; background-image: url('http://jawknee.com/coLab/Resources/P1Gray.png'); color: black } a:link { color: #d8c8b8; text-decoration: none;}
+body { background-color: #a0a0a0; background-image: url('http://jawknee.com/coLab/Resources/P1Gray.png'); color: black } a:link { color: #d8c8b8; text-decoration: none;}
 a:visited { color: #b8a898; text-decoration: none; }
 a:hover { color: #f0e0d0; }
 a:active { color: #ffffff; }
@@ -21,14 +21,14 @@ pre { font-family: chicago; }
 	background-color: #606060; background-image: url('http://jawknee.com/coLab/Resources/P1Gray.png'); 
 	}
 
-.main { font-family:Georgia; 
-	background-color: #202020; 
+.main { font-family:Georgia; top: 24px; 
+	background-color: #151515; 
 	background-image: url('http://jawknee.com/coLab/Resources/P1Black2.png');
 	color: #a0b0c0; }
 
 .main h2 { color: #c0b0a0; }
 .main table { font-family:Georgia;
-		background-color: #209090;
+		background-color: #151515;
 	        background-image: url('http://jawknee.com/coLab/Resources/P1Black2.png');
 	        color: #a0b0c0; }
 .main table h2 { color: #c0b0a0; }
