--- a/Resources/Style_Default.css
+++ b/Resources/Style_Default.css
@@ -1,4 +1,5 @@
-body { background-color: #a0a0a0; background-image: url('http://jawknee.com/coLab/Resources/P1GraySm.png');
+html, body { background-color: #a0a0a0; background-image: url('http://jawknee.com/coLab/Resources/P1GraySm.png');
+	height: 100%:
         color: black }
 
 a:link { color: #d8c8b8; text-decoration: none;}
@@ -13,10 +14,11 @@ textarea { background-color: #b0b0b8; font-family: Georgia; width: 640px; font-s
 input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 
 .banner { position: absolute; top: 4px; left: 4;  height: 20px;  right: 4;
+	z-index: 3;
 	font-family:Georgia; color: #c0b0a0; 
 	background-color: #000040; background-image: url('http://jawknee.com/coLab/Resources/BlueBlackBanner.png'); 
 	}
-.banner table td { width: 20% }
+.banner table td { width: 2% }
 .banner_txt { color: #c0b0a0 }
 .banner_txt a:link { color: #d8c8b8; text-decoration: none;}
 .banner_txt a:visited { color: #b8a898; text-decoration: none; }
