Click to Locate
Some major changes to allow the user to click on the video and locate
to that spot.   Seems to be working in "web page mode" on all browsers,
 but only on some in graphical mode.

Implements a new, shared javascript file: video_engine.js which allows
the various events to drive the video.   This does much of the work
needed for Issue #46.

None remaining issue:  still some scaling issues on screen shots in
full screen - full screen doesn't work well on Safari or at all on IE.

Current ffmpeg encoding of webm may also be a problem.

--- a/Resources/Style_Default.css
+++ b/Resources/Style_Default.css
@@ -50,7 +50,7 @@ input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 .main { position: absolute; top: 24px; left: 204px;  width: 700px; 
 	font-family:Georgia; 
 	background-color: #151515;
-	background-image: url('http://jawknee.com/coLab/Resources/P1Black2.png');
+	background-image: url('/coLab/Resources/P1Black2.png');
 	color: #a0b0c0; }
 
 .main h2 { color: #c0b0a0; }
@@ -58,7 +58,7 @@ input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 .main h4 { color: #c0b0a0; }
 .main table { color: #a0b0c0; 
 	background-color: #151515;
-	background-image: url('http://jawknee.com/coLab/Resources/P1Black2.png');
+	background-image: url('/coLab/Resources/P1Black2.png');
 	}
 .main table h2 { color: #c0b0a0; }
 
