--- a/Resources/Style_VidAuto.css
+++ b/Resources/Style_VidAuto.css
@@ -1,8 +1,6 @@
-html, body { background-color: #a0a0a0; background-image: url('http://jawknee.com/coLab/Resources/P1GraySm.png');
+html, body { background-color: #a0a0a0; background-image: url('/coLab/Resources/P1GraySm.png');
 	height: 100%:
-        color: black }
-
-a:link { color: #d8c8b8; text-decoration: none;}
+        color: black }:link { color: #d8c8b8; text-decoration: none;}
 a:visited { color: #b8a898; text-decoration: none; }
 a:hover { color: #f0e0d0; text-decoration; underline; }
 a:active { color: #ffffff; text-decoration; underline; }
@@ -16,7 +14,7 @@ input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 .banner { position: absolute; top: 4px; left: 4px;  height: 20px;  right: 4px;
 	z-index: 3;
 	font-family:Georgia; color: #c0b0a0; 
-	background-color: #000040; background-image: url('http://jawknee.com/coLab/Resources/BlueBlackBanner.png'); 
+	background-color: #000040; background-image: url('/coLab/Resources/BlueBlackBanner.png'); 
 	}
 .banner table td { width: 2% }
 .banner_txt { color: #c0b0a0 }
@@ -28,7 +26,7 @@ input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 .sidebar_l { position: absolute; top: 24px; left: 4px; width: 200px; 
 	font-family: Helvetica; font-size: smaller;
 	color: black; 
-	background-color: #606060; background-image: url('http://jawknee.com/coLab/Resources/P1GraySm.png'); 
+	background-color: #606060; background-image: url('/coLab/Resources/P1GraySm.png'); 
 	}
 
 .sidebar_l a:link { color: #2030ff; text-decoration: none;}
@@ -39,7 +37,7 @@ input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 .sidebar_r { position: absolute; top: 75px; left: 915px; 
 	font-family: Helvetica; font-size: smaller;
 	color: black; 
-	background-color: #606060; background-image: url('http://jawknee.com/coLab/Resources/P1GraySm.png'); 
+	background-color: #606060; background-image: url('/coLab/Resources/P1GraySm.png'); 
 	}
 
 .sidebar_r a:link { color: #2030ff; text-decoration: none;}
@@ -47,11 +45,15 @@ input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 .sidebar_r a:hover { color: #f0e0d0; text-decoration: underline;}
 .sidebar_r a:active { color: #ffffff; text-decoration: underline;}
 
+/* 
+ * Open Loop Alert: the numbers here are repeated in the config.py file - need to come from
+ * a single source at some point 
+ */
 .main { position: absolute; top: 24px; left: 204px;  width: 700px; 
 	text-align:center;
 	font-family:Georgia; 
 	background-color: #151515;
-	background-image: url('http://jawknee.com/coLab/Resources/P1Black2.png');
+	background-image: url('/coLab/Resources/P1Black2.png');
 	color: #a0b0c0; }
 
 .main h2 { color: #c0b0a0; }
@@ -59,7 +61,7 @@ input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 .main h4 { color: #c0b0a0; }
 .main table { color: #a0b0c0; 
 	background-color: #151515;
-	background-image: url('http://jawknee.com/coLab/Resources/P1Black2.png');
+	background-image: url('/coLab/Resources/P1Black2.png');
 	}
 .main table h2 { color: #c0b0a0; }
 
@@ -88,10 +90,22 @@ input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 .copyright { text-align:center; font-size:small; }
 
 
+#video {
+	position: relative;
+	top: 0px;
+}
+
 #video-container {
 	width: 640px;
-	height: 530px;
+	height: 550px;
 	position: relative;
+	top: 0px;
+	text-align: center;
+	/* force the left margin rather than center - to account for
+	 * the scroll bar width  ~12 pixels  
+	 */
+	margin-left: 24px;
+	margin-right: auto;
 }
 
 #video-controls {
@@ -101,23 +115,23 @@ input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 	right: 0;
 	padding: 5px;
 	opacity: 0;
-	-webkit-transition: opacity .3s;
-	-moz-transition: opacity .3s;
-	-o-transition: opacity .3s;
-	-ms-transition: opacity .3s;
-	transition: opacity .3s;
-	background-image: linear-gradient(bottom, rgb(3,113,168) 13%, rgb(0,136,204) 100%);
-	background-image: -o-linear-gradient(bottom, rgb(3,113,168) 13%, rgb(0,136,204) 100%);
-	background-image: -moz-linear-gradient(bottom, rgb(3,113,168) 13%, rgb(0,136,204) 100%);
-	background-image: -webkit-linear-gradient(bottom, rgb(3,113,168) 13%, rgb(0,136,204) 100%);
-	background-image: -ms-linear-gradient(bottom, rgb(3,113,168) 13%, rgb(0,136,204) 100%);
+	-webkit-transition: opacity 1.0s;
+	-moz-transition: opacity 1.0s;
+	-o-transition: opacity 1.0s;
+	-ms-transition: opacity 1.0s;
+	transition: opacity 1.0s;
+	background-image: linear-gradient(bottom, rgb(10, 80, 145) 40%, rgb(0,73,141)  100%);
+	background-image: -o-linear-gradient(bottom, rgb(10, 80, 145) 40%, rgb(0,73,141)  100%);
+	background-image: -moz-linear-gradient(bottom, rgb(10, 80, 145) 40%, rgb(0,73,141)  100%);
+	background-image: -webkit-linear-gradient(bottom, rgb(10, 80, 145) 40%, rgb(0,73,141)  100%);
+	background-image: -ms-linear-gradient(bottom, rgb(10, 80, 145) 40%, rgb(0,73,141)  100%);
 
 	background-image: -webkit-gradient(
 		linear,
 		left bottom,
 		left top,
-		color-stop(0.13, rgb(3,113,168)),
-		color-stop(1, rgb(0,136,204))
+		color-stop(0.40, rgb(10,80,145)),
+		color-stop(1, rgb(0,73,141))
 	);
 }
 
@@ -146,3 +160,12 @@ button:hover {
 #volume-bar {
 	width: 60px;
 }
+
+/*	this may help with the Android scaling - but so far it seems to 
+ *	make it worse.
+:-webkit-full-screen video {
+  width: 100%;
+  height: 100%;
+}
+ */
+
