--- a/Resources/Style_VidAutoTest.css
+++ b/Resources/Style_VidAutoTest.css
@@ -161,5 +161,11 @@ button:hover {
 	width: 60px;
 }
 
+/*	this may help with the Android scaling - but so far it seems to 
+ *	make it worse.
+:-webkit-full-screen video {
+  width: 100%;
+  height: 100%;
 }
+ */
 
