--- a/Resources/Style_VidAuto.css
+++ b/Resources/Style_VidAuto.css
@@ -1,9 +1,9 @@
 html, body { background-color: #a0a0a0; background-image: url('/coLab/Resources/P1GraySm.png');
-	height: 100%:
-        color: black }:link { color: #d8c8b8; text-decoration: none;}
+	height: 100%;
+        color: black;}:link { color: #d8c8b8; text-decoration: none;}
 a:visited { color: #b8a898; text-decoration: none; }
-a:hover { color: #f0e0d0; text-decoration; underline; }
-a:active { color: #ffffff; text-decoration; underline; }
+a:hover { color: #f0e0d0; text-decoration: underline; }
+a:active { color: #ffffff; text-decoration: underline; }
 
 pre { font-family: chicago; }
 
