--- a/Resources/Style_VidAuto.css
+++ b/Resources/Style_VidAuto.css
@@ -140,7 +140,7 @@ input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 }
 
 button {
-	background: rgba(0,0,0,.5);
+	background: rgba(192, 192, 255, 0.2);
 	border: 0;
 	color: #EEE;
 	-webkit-border-radius: 3px;
@@ -149,9 +149,11 @@ button {
 	border-radius: 3px;
 }
 
+
 button:hover {
 	cursor: pointer;
 }
+
 
 #seek-bar {
 	width: 360px;
