--- a/Resources/Style_VidAuto.css
+++ b/Resources/Style_VidAuto.css
@@ -139,6 +139,10 @@ input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 	opacity: .9;
 }
 
+.vidbarbutton {
+	background: rbg(255, 0, 0);
+}
+
 button {
 	background: rgba(192, 192, 255, 0.2);
 	border: 0;
