Javascript Support for locating strings
This adds a good deal of the functionality  #55 - <span
class="TimeMarker"> or "LocMarker" will be picked up by the javascript
and will locate (and currently, play) to/from the corresponding
location.

Still to do:
1) add scripting - at least on the comment side, to tag the strings.
2) Try to find a way to only highlight the span tags if the time or loc
is valid
3) Add link to generated location strings on right side bar
4) (stretch) use php to do this on the fly?

--- a/Resources/Style_VidAuto.css
+++ b/Resources/Style_VidAuto.css
@@ -159,6 +159,9 @@ button:hover {
 	cursor: pointer;
 }
 
+# markers - class used when javascript has processed them...
+span.TimeMarker { color: #d8c8b8; text-decoration: none;}
+span.LocMarker { color: #d8c8b8; text-decoration: none;}
 
 #seek-bar {
 	width: 360px;
