Right Click - Chapter 2
Or: I sure hope these menus eventually pop up above full screen.

This implements a good portion of the functionality I have in mind
including:

- post the current location to the comments area
- set up the menu as needed
Need to add a detach to go with the attach.

--- a/Resources/Style_VidAuto.css
+++ b/Resources/Style_VidAuto.css
@@ -94,6 +94,7 @@ input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 #video {
 	position: relative;
 	top: 0px;
+	z-index: 0;
 }
 
 #video-container {
