--- a/Resources/Style_Default.css
+++ b/Resources/Style_Default.css
@@ -1,35 +1,57 @@
-html, body { background-color: #a0a0a0; background-image: url('http://jawknee.com/coLab/Resources/P1GraySm.png');
-	height: 100%:
-        color: black }
-
-a:link { color: #d8c8b8; text-decoration: none;}
+html, body { background-color: #a0a0a0; background-image: url('/coLab/Resources/P1GraySm.png');
+	height: 100%;
+        color: black;}:link { color: #d8c8b8; text-decoration: none;}
 a:visited { color: #b8a898; text-decoration: none; }
-a:hover { color: #f0e0d0; text-decoration; underline; }
-a:active { color: #ffffff; text-decoration; underline; }
+a:hover { color: #f0e0d0; text-decoration: underline; }
+a:active { color: #ffffff; text-decoration: underline; }
 
 pre { font-family: chicago; }
 
 textarea { background-color: #b0b0b8; font-family: Georgia; width: 640px; font-size: 12pt; }
 
 input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
+/* master - fill the browser - scale/scroll to that  */
+#Master { 
+	position: absolute;
+	top: 0px; 
+	left: 0px; 
+	right: 0px;
+	bottom: 0px;
+	overflow: hidden;
+	}
 
-.banner { position: absolute; top: 4px; left: 4px;  height: 20px;  right: 4px;
+#banner { position: relative; top: 4px; left: 4px;  height: 20px;  right: 4px;
 	z-index: 3;
 	font-family:Georgia; color: #c0b0a0; 
-	background-color: #000040; background-image: url('http://jawknee.com/coLab/Resources/BlueBlackBanner.png'); 
+	background-color: #000040; 
+	background-image: url('/coLab/Resources/BlueBlackBanner.png'); 
+	overflow: hidden;
 	}
-.banner table td { width: 2% }
+#banner table td { width: 2% }
+
 .banner_txt { color: #c0b0a0 }
 .banner_txt a:link { color: #d8c8b8; text-decoration: none;}
 .banner_txt a:visited { color: #b8a898; text-decoration: none; }
 .banner_txt a:hover { color: #f0e0d0; text-decoration: underline;}
 .banner_txt a:active { color: #ffffff; text-decoration: underline;}
 
-.sidebar_l { position: absolute; top: 24px; left: 4px; width: 200px; 
+#container { 
+	position: absolute;
+	top: 24px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	overflow: hidden;
+	}
+
+#sidebar_l { position: absolute; top: 24px; left: 4px; width: 200px; 
 	font-family: Helvetica; font-size: smaller;
 	color: black; 
-	background-color: #606060; background-image: url('http://jawknee.com/coLab/Resources/P1GraySm.png'); 
+	bottom: 0px;
+	overflow: auto;
+	background-color: #606060; background-image: url('/coLab/Resources/P1GraySm.png'); 
 	}
+
 
 .sidebar_l a:link { color: #2030ff; text-decoration: none;}
 .sidebar_l a:visited { color: #0000c0; text-decoration: none; }
@@ -39,20 +61,33 @@ input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 .sidebar_r { position: absolute; top: 75px; left: 915px; 
 	font-family: Helvetica; font-size: smaller;
 	color: black; 
-	background-color: #606060; background-image: url('http://jawknee.com/coLab/Resources/P1GraySm.png'); 
+	bottom: 0px;
+	overflow: auto;
+	background-color: #606060; background-image: url('/coLab/Resources/P1GraySm.png'); 
 	}
 
 .sidebar_r a:link { color: #2030ff; text-decoration: none;}
 .sidebar_r a:visited { color: #0000c0; text-decoration: none; }
 .sidebar_r a:hover { color: #f0e0d0; text-decoration: underline;}
 .sidebar_r a:active { color: #ffffff; text-decoration: underline;}
+.sidebar_r span.LocMarkerActive { color: #2030AA; text-decoration: none;}
 
-.main { position: absolute; top: 24px; left: 204px;  width: 700px; 
+
+#Content {
+	position: absolute; top: 0px; bottom: 0px; left: 204px;  width: 700px; 
+	text-align:center;
 	font-family:Georgia; 
 	background-color: #151515;
 	background-image: url('/coLab/Resources/P1Black2.png');
-	color: #a0b0c0; }
+	color: #a0b0c0; 
+	overflow: hidden;
+	}
 
+
+/* 
+ * Open Loop Alert: the numbers here are repeated in the config.py file - need to come from
+ * a single source at some point 
+ */
 .main h2 { color: #c0b0a0; }
 .main h3 { color: #c0b0a0; }
 .main h4 { color: #c0b0a0; }
@@ -62,7 +97,20 @@ input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 	}
 .main table h2 { color: #c0b0a0; }
 
-.maintext { position: relative; left: 25px; width: 640px; }
+#toplinkbar {
+	position: relative;;
+	top: 400;
+	width: 600;
+	}
+#maintext { 
+	position: absolute; 
+	top: 600px;
+	bottom: 0px;
+	left: 25px; width: 600;
+	overflow: auto;
+	text-align:left;
+	color: #a0b0c0;
+	}
 
 .fundesc { font-family: cursive, 'Brush Script MT','Lucida Handwriting'; color: #c0b0a0 }
 
@@ -81,6 +129,101 @@ input { background-color: #b0b0b0; font-family: Georgia; font-size: 12pt; }
 
 .logo { position: absolute; top: 40px; right: 20px; }
 
-# markers - class used when javascript has processed them...
+.copyright { text-align:center; font-size:small; }
+
+
+#video {
+	position: relative;
+	top: 0px;
+	z-index: 1;
+}
+
+#video-container {
+	width: 640px;
+	height: 525px;
+	position: relative;
+	top: 0px;
+	text-align: center;
+	/* force the left margin rather than center - to account for
+	 * the scroll bar width  ~12 pixels  
+	 */
+	margin-left: 24px;
+	margin-right: auto;
+	z-index: 0;
+	overflow: hidden;
+}
+
+#video-controls {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	padding: 5px;
+	opacity: 0;
+	-webkit-transition: opacity 1.0s;
+	-moz-transition: opacity 1.0s;
+	-o-transition: opacity 1.0s;
+	-ms-transition: opacity 1.0s;
+	transition: opacity 1.0s;
+	background-image: linear-gradient(bottom, rgb(10, 80, 145) 40%, rgb(0,73,141)  100%);
+	background-image: -o-linear-gradient(bottom, rgb(10, 80, 145) 40%, rgb(0,73,141)  100%);
+	background-image: -moz-linear-gradient(bottom, rgb(10, 80, 145) 40%, rgb(0,73,141)  100%);
+	background-image: -webkit-linear-gradient(bottom, rgb(10, 80, 145) 40%, rgb(0,73,141)  100%);
+	background-image: -ms-linear-gradient(bottom, rgb(10, 80, 145) 40%, rgb(0,73,141)  100%);
+
+	background-image: -webkit-gradient(
+		linear,
+		left bottom,
+		left top,
+		color-stop(0.40, rgb(10,80,145)),
+		color-stop(1, rgb(0,73,141))
+	);
+}
+
+#video-container:hover #video-controls {
+	opacity: .9;
+}
+
+.vidbarbutton {
+	background: rbg(255, 0, 0);
+}
+
+button {
+	background: rgba(192, 192, 255, 0.2);
+	border: 0;
+	color: #EEE;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	-o-border-radius: 3px;
+	border-radius: 3px;
+	box-shadow: 2px 2px 0 #870 inset, -3px -3px 0 #870 inset, 5px 5px 0 #444 inset, 6px 6px 6px rgba(0,0,0,0.6) ;
+}
+
+
+button:hover {
+	cursor: pointer;
+}
+
+/* markers - class used when javascript has processed them...  */
 span.TimeMarkerActive { color: #d8c8b8; text-decoration: none;}
 span.LocMarkerActive { color: #d8c8b8; text-decoration: none;}
+
+#seek-bar {
+	width: 360px;
+}
+
+#volume-bar {
+	width: 50px;
+	background: rgba(192, 192, 255, 0.2);
+	color: #870
+	outline: none;
+	box-shadow: 6px 6px 6px rgba(0,0,0,0.6) ;
+}
+
+/*	this may help with the Android scaling - but so far it seems to 
+ *	make it worse.
+:-webkit-full-screen video {
+  width: 100%;
+  height: 100%;
+}
+ */
